--- a/style.css
+++ b/style.css
@@ -1,222 +1,240 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap");
 
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-body{
-    width: 100vw;
-    height: 100vh;
-    font-family: 'Roboto', sans-serif;
-
-    background-image: url(assets/ivana-cajina-HDd-NQ_AMNQ-unsplash.jpg);
-    background-size: cover;
-    background-position-y: 11%;
-    background-repeat: no-repeat;
-
-    overflow: hidden;
-}
-.container{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-
-    border-radius: 15px;
-    width: 50vh;
-    height: 70vh;
-    padding: 40px;
-
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-
-    border: 2px solid black;
-    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.288), rgba(0, 0, 0, 0.185));
-    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.342);
-    
-    text-align: center;
-    color: white;
-    overflow: hidden;
-}
-/* ----- input e botão  ----- */
-header{
-    width: 100%;
-    height: 15%;
-    padding: 0px;
-    display: flex;
-    flex-direction: row;
-}
-header input{
-    width: 75%;
-    height: 40px;
-    font-size: 1.2em;
-    padding: 5px;
-
-    background-color: white;
-    border: none;
-    border-bottom: 3px solid black!important;
-    border-top-left-radius: 10px;
-    border-bottom-left-radius: 10px;
-
-    outline: none;
-}
-header button{
-    width: 25%;
-    height: 40px;
-    font-size: 1.2em;
-    padding: 5px;
-
-    border: 1px solid black;
-    border-bottom: 3px solid black!important;
-    border-top-right-radius: 10px;
-    border-bottom-right-radius: 10px;
-    
-    outline: none;
-    cursor: pointer;
-    transition: 300ms ease-in;
-}
-.btnDia{
-    background-color: #ffe3ce;
-}
-.btnDia:hover{
-    background-color: #ffd0ac;
-}
-.btnNoite{
-    background-color: #bafcfc;
-}
-.btnNoite:hover{
-    background-color: #87ebeb;;
-}
-/* ----- ------ */
-
-
-/* ----- Informações da cidade ----- */
-.localizacao{
-    margin-top: 3%;
-}
-.cidade{
-    font-size: 1.7em;
-    font-weight: bold;
-}
-.data{
-    font-size: 1.2em;
-    margin: 0% 0%;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
 }
 
-.temperatura{
-    font-size: 7em;
-    font-weight: bold;
-    text-shadow: 3px 3px 1px black;
-    margin: 10% 0;
-    transform: translateX(4%);
-}
-.clima{
-    font-size: 1.7em;
-    font-weight: bold;
-}
-.min-max{
-    font-size: 1.3em;
-    margin: 2% 0%;
-}
-/* ----- ----- */
-
-@keyframes surgir {
-    0%{
-        opacity: 0;
-    }
-    100%{
-        opacity: 1;
-    }
+body {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  background-size: contain;
+  background-repeat: round;
+  background-image: url(./assets/horizon.png) ;
+  color: #fff;
 }
 
-/* -----laptop tela grande ----- */
-@media screen and (min-width: 1700px){
-    .container{
-        width: 700px;
-        height: 80vh;
-    }
-    header > input, header > button{
-        font-size: 2em;
-        font-weight: bold;
-        height: 60px;
-    }
-
-
-    .cidade{
-        font-size: 3em;
-    }
-    .data{
-        font-size: 2em;
-    }
-    
-    .temperatura{
-        font-size: 9em;
-        margin: 5% 0%;
-    }
-    .clima{
-        font-size: 3em;
-    }
-    .min-max{
-        font-size: 2em;
-    }
-
-}
-/* ----- telas 4k -----*/
-@media screen and (min-width: 2100px){
-    .container{
-        width: 1100px;
-        height: 85vh;
-    }
-    header > input, header > button{
-        font-size: 3.5em;
-        font-weight: normal;
-        height: 90px;
-    }
-
-    .cidade{
-        font-size: 4em;
-    }
-    .data{
-        font-size: 3em;
-    }
-    
-    .temperatura{
-        font-size: 10em;
-        margin: 2% 0%;
-    }
-    .clima{
-        font-size: 4em;
-    }
-    .min-max{
-        font-size: 3em;
-    }
+::selection {
+  color: #141414;
+  background: #fff;
 }
 
-/* ----- mobile ----- */
-@media screen and (max-width: 460px){
-    .container{
-        width: 90vw;
-    }
-    header > input, header > button{
-        font-weight: bold;
-    }
+.wrapper {
+  width: 400px;
+  background: #1f1f1f;
+  border-radius: 7px;
+  border: 1px solid #fff;
+  box-shadow: 7px 7px 20px rgba(0, 0, 0, 0.05);
 }
-@media screen and (max-width: 380px){
-    header > input, header > button{
-        font-size: 1.1em;
-    }
-    header > input{
-        width: 65%;
-    }
-    header > button{
-        width: 35%;
-    }
+
+.wrapper header {
+  display: flex;
+  font-size: 21px;
+  font-weight: 500;
+  color: #dbc025;
+  padding: 16px 15px;
+  align-items: center;
+  border-bottom: 1px solid #333;
 }
-@media screen and (max-width: 345px){
-    header > input, header > button{
-        font-weight: bold;
-        height: 45px;
-    }
+
+header i {
+  font-size: 0em;
+  cursor: pointer;
+
+  margin-right: 8px;
+}
+
+.wrapper.active header i {
+  margin-left: 5px;
+  font-size: 30px;
+}
+
+.wrapper .input-part {
+  margin: 20px 25px 30px;
+}
+
+.wrapper.active .input-part {
+  display: none;
+}
+
+.input-part .info-txt {
+  display: none;
+  font-size: 17px;
+  text-align: center;
+  padding: 12px 10px;
+  border-radius: 7px;
+  margin-bottom: 15px;
+}
+
+.input-part .info-txt.error {
+  color: #ff5252;
+  display: block;
+  background: #1f1f1f;
+  border: 1px solid #ff5252;
+}
+
+.input-part .info-txt.pending {
+  color: #5362b8;
+  display: block;
+  background: #1f1f1f;
+  border: 1px solid #5362b8;
+}
+
+.input-part :where(input, button) {
+  width: 100%;
+  height: 55px;
+  border: none;
+  outline: none;
+  font-size: 18px;
+  border-radius: 7px;
+}
+
+.input-part input {
+  text-align: center;
+  padding: 0 15px;
+  border: 1px solid #333;
+}
+
+.input-part input:is(:focus, :valid) {
+  border: 2px solid #dbc025;
+}
+
+.input-part input::placeholder {
+  color: #666;
+}
+
+.input-part .separator {
+  height: 1px;
+  width: 100%;
+  margin: 25px 0;
+  background: #333;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.separator::before {
+  content: "ou";
+  color: #666;
+  font-size: 19px;
+  padding: 0 15px;
+  background: #1f1f1f;
+}
+
+.input-part button {
+  color: #fff;
+  cursor: pointer;
+  background: #5362b8;
+  transition: 0.3s ease;
+}
+
+.input-part button:hover {
+  background: #525d9c;
+}
+
+.wrapper .weather-part {
+  display: none;
+  margin: 30px 0 0;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.wrapper.active .weather-part {
+  display: flex;
+}
+
+.weather-part img {
+  max-width: 125px;
+}
+
+.weather-part .temp {
+  display: flex;
+  font-weight: 500;
+  font-size: 72px;
+}
+
+.weather-part .temp .numb {
+  font-weight: 600;
+}
+
+.weather-part .temp .deg {
+  font-size: 40px;
+  display: block;
+  margin: 10px 5px 0 0;
+}
+
+.weather-part .weather {
+  font-size: 21px;
+  text-align: center;
+  margin: -5px 20px 15px;
+}
+
+.weather-part .location {
+  display: flex;
+  font-size: 19px;
+  padding: 0 20px;
+  text-align: center;
+  margin-bottom: 30px;
+  align-items: flex-start;
+}
+
+.location i {
+  font-size: 22px;
+  margin: 4px 5px 0 0;
+}
+
+.weather-part .bottom-details {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  border-top: 1px solid #333;
+}
+
+.bottom-details .column {
+  display: flex;
+  width: 100%;
+  padding: 15px 0;
+  align-items: center;
+  justify-content: center;
+}
+
+.column i {
+  color: #43affc;
+  font-size: 40px;
+}
+
+.column.humidity {
+  border-left: 1px solid #333;
+}
+
+.column .details {
+  margin-left: 3px;
+}
+
+.details .temp,
+.humidity span {
+  font-size: 18px;
+  font-weight: 500;
+  margin-top: -3px;
+}
+
+.details .temp .deg {
+  margin: 0;
+  font-size: 17px;
+  padding: 0 2px 0 1px;
+}
+
+.column .details p {
+  font-size: 14px;
+  margin-top: -6px;
+}
+
+.humidity i {
+  font-size: 37px;
 }
