--- a/assets/style.css
+++ b/assets/style.css
@@ -14,7 +14,7 @@ body {
   min-height: 100vh;
   background-size: contain;
   background-repeat: round;
-  background-image: url(./assets/horizon.png) ;
+  background-image: url(./horizon.png) ;
   color: #fff;
 }
 
@@ -24,7 +24,8 @@ body {
 }
 
 .wrapper {
-  width: 400px;
+  min-width: 100vh;
+  min-height: 50vh;
   background: #1f1f1f;
   border-radius: 7px;
   border: 1px solid #fff;
@@ -33,12 +34,16 @@ body {
 
 .wrapper header {
   display: flex;
-  font-size: 21px;
+  font-size: 30px;
   font-weight: 500;
   color: #dbc025;
   padding: 16px 15px;
   align-items: center;
   border-bottom: 1px solid #333;
+}
+
+.content{
+  margin: 50px;
 }
 
 header i {
@@ -110,7 +115,7 @@ header i {
 .input-part .separator {
   height: 1px;
   width: 100%;
-  margin: 25px 0;
+  margin: 45px 0;
   background: #333;
   position: relative;
   display: flex;
@@ -238,3 +243,4 @@ header i {
 .humidity i {
   font-size: 37px;
 }
+
